# api/doc/swagger.json
@@ -32,7 +32,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/models.UserSwagger"
                         }
                     }
                 ],
@@ -127,31 +127,19 @@
                 }
             }
         },
-        "models.User": {
+        "models.UserSwagger": {
             "type": "object",
-            "required": [
-                "email",
-                "nickname",
-                "password"
-            ],
             "properties": {
                 "email": {
-                    "type": "string",
-                    "maxLength": 255
+                    "type": "string"
                 },
                 "name": {
-                    "type": "string",
-                    "maxLength": 255
+                    "type": "string"
                 },
                 "nickname": {
-                    "type": "string",
-                    "maxLength": 255
+                    "type": "string"
                 },
                 "password": {
-                    "type": "string",
-                    "minLength": 6
-                },
-                "user_id": {
                     "type": "string"
                 }
             }
